// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceCommandGenerationService should encode version correctly in file and class names 1`] = `
{
  "className": "TestFastInstanceCommand",
  "fileName": "30-40-instance-command-fast-1775000000000-test.ts",
  "fileTemplate": "import { QueryRunner } from 'typeorm';

import { RegisteredInstanceCommand } from 'src/engine/core-modules/upgrade/decorators/registered-instance-command.decorator';
import { FastInstanceCommand } from 'src/engine/core-modules/upgrade/interfaces/fast-instance-command.interface';

@RegisteredInstanceCommand('30.40.0', 1775000000000)
export class TestFastInstanceCommand implements FastInstanceCommand {
  public async up(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('SELECT 1');
  }

  public async down(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('SELECT 1');
  }
}
",
}
`;

exports[`InstanceCommandGenerationService should escape backslashes in SQL queries 1`] = `
{
  "className": "UpdatePathFastInstanceCommand",
  "fileName": "10-20-instance-command-fast-1775000000000-update-path.ts",
  "fileTemplate": "import { QueryRunner } from 'typeorm';

import { RegisteredInstanceCommand } from 'src/engine/core-modules/upgrade/decorators/registered-instance-command.decorator';
import { FastInstanceCommand } from 'src/engine/core-modules/upgrade/interfaces/fast-instance-command.interface';

@RegisteredInstanceCommand('10.20.0', 1775000000000)
export class UpdatePathFastInstanceCommand implements FastInstanceCommand {
  public async up(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('UPDATE "core"."config" SET "value" = E\\'path\\\\\\\\to\\\\\\\\file\\'');
  }

  public async down(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('UPDATE "core"."config" SET "value" = NULL');
  }
}
",
}
`;

exports[`InstanceCommandGenerationService should escape single quotes in SQL queries 1`] = `
{
  "className": "UpdateConfigFastInstanceCommand",
  "fileName": "10-20-instance-command-fast-1775000000000-update-config.ts",
  "fileTemplate": "import { QueryRunner } from 'typeorm';

import { RegisteredInstanceCommand } from 'src/engine/core-modules/upgrade/decorators/registered-instance-command.decorator';
import { FastInstanceCommand } from 'src/engine/core-modules/upgrade/interfaces/fast-instance-command.interface';

@RegisteredInstanceCommand('10.20.0', 1775000000000)
export class UpdateConfigFastInstanceCommand implements FastInstanceCommand {
  public async up(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('UPDATE "core"."config" SET "value" = \\'it\\'\\'s done\\'');
  }

  public async down(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('UPDATE "core"."config" SET "value" = \\'original\\'');
  }
}
",
}
`;

exports[`InstanceCommandGenerationService should generate a migration with a single up/down query 1`] = `
{
  "className": "AddFooColumnFastInstanceCommand",
  "fileName": "10-20-instance-command-fast-1775000000000-add-foo-column.ts",
  "fileTemplate": "import { QueryRunner } from 'typeorm';

import { RegisteredInstanceCommand } from 'src/engine/core-modules/upgrade/decorators/registered-instance-command.decorator';
import { FastInstanceCommand } from 'src/engine/core-modules/upgrade/interfaces/fast-instance-command.interface';

@RegisteredInstanceCommand('10.20.0', 1775000000000)
export class AddFooColumnFastInstanceCommand implements FastInstanceCommand {
  public async up(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('ALTER TABLE "core"."user" ADD "foo" varchar');
  }

  public async down(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('ALTER TABLE "core"."user" DROP COLUMN "foo"');
  }
}
",
}
`;

exports[`InstanceCommandGenerationService should generate a migration with multiple queries 1`] = `
{
  "className": "CreateTaskTableFastInstanceCommand",
  "fileName": "10-20-instance-command-fast-1775000000000-create-task-table.ts",
  "fileTemplate": "import { QueryRunner } from 'typeorm';

import { RegisteredInstanceCommand } from 'src/engine/core-modules/upgrade/decorators/registered-instance-command.decorator';
import { FastInstanceCommand } from 'src/engine/core-modules/upgrade/interfaces/fast-instance-command.interface';

@RegisteredInstanceCommand('10.20.0', 1775000000000)
export class CreateTaskTableFastInstanceCommand implements FastInstanceCommand {
  public async up(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('CREATE TABLE "core"."task" ("id" uuid NOT NULL DEFAULT uuid_generate_v4(), "name" varchar NOT NULL)');
    await queryRunner.query('ALTER TABLE "core"."task" ADD CONSTRAINT "PK_task" PRIMARY KEY ("id")');
  }

  public async down(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('DROP TABLE "core"."task"');
    await queryRunner.query('ALTER TABLE "core"."task" DROP CONSTRAINT "PK_task"');
  }
}
",
}
`;

exports[`InstanceCommandGenerationService should generate a migration with query parameters 1`] = `
{
  "className": "SeedSettingFastInstanceCommand",
  "fileName": "10-20-instance-command-fast-1775000000000-seed-setting.ts",
  "fileTemplate": "import { QueryRunner } from 'typeorm';

import { RegisteredInstanceCommand } from 'src/engine/core-modules/upgrade/decorators/registered-instance-command.decorator';
import { FastInstanceCommand } from 'src/engine/core-modules/upgrade/interfaces/fast-instance-command.interface';

@RegisteredInstanceCommand('10.20.0', 1775000000000)
export class SeedSettingFastInstanceCommand implements FastInstanceCommand {
  public async up(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('INSERT INTO "core"."setting" ("key", "value") VALUES ($1, $2)', ["theme","dark"]);
  }

  public async down(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('DELETE FROM "core"."setting" WHERE "key" = $1', ["theme"]);
  }
}
",
}
`;

exports[`InstanceCommandGenerationService should generate a slow instance command with populated up/down 1`] = `
{
  "className": "MakeColumnNotNullableSlowInstanceCommand",
  "fileName": "10-20-instance-command-slow-1775000000000-make-column-not-nullable.ts",
  "fileTemplate": "import { DataSource, QueryRunner } from 'typeorm';

import { RegisteredInstanceCommand } from 'src/engine/core-modules/upgrade/decorators/registered-instance-command.decorator';
import { SlowInstanceCommand } from 'src/engine/core-modules/upgrade/interfaces/slow-instance-command.interface';

@RegisteredInstanceCommand('10.20.0', 1775000000000, { type: 'slow' })
export class MakeColumnNotNullableSlowInstanceCommand implements SlowInstanceCommand {
  async runDataMigration(dataSource: DataSource): Promise<void> {
    // TODO: implement data backfill before the DDL migration
  }

  public async up(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('ALTER TABLE "core"."user" ALTER COLUMN "email" SET NOT NULL');
  }

  public async down(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('ALTER TABLE "core"."user" ALTER COLUMN "email" DROP NOT NULL');
  }
}
",
}
`;

exports[`InstanceCommandGenerationService should use default migration name in class and file names 1`] = `
{
  "className": "AutoGeneratedFastInstanceCommand",
  "fileName": "10-20-instance-command-fast-1775000000000-auto-generated.ts",
  "fileTemplate": "import { QueryRunner } from 'typeorm';

import { RegisteredInstanceCommand } from 'src/engine/core-modules/upgrade/decorators/registered-instance-command.decorator';
import { FastInstanceCommand } from 'src/engine/core-modules/upgrade/interfaces/fast-instance-command.interface';

@RegisteredInstanceCommand('10.20.0', 1775000000000)
export class AutoGeneratedFastInstanceCommand implements FastInstanceCommand {
  public async up(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('ALTER TABLE "core"."user" ADD "bar" integer');
  }

  public async down(queryRunner: QueryRunner): Promise<void> {
    await queryRunner.query('ALTER TABLE "core"."user" DROP COLUMN "bar"');
  }
}
",
}
`;
